syntax = "proto3";
package location;

import "proto/common/common.proto";

option java_multiple_files = true;
option java_package = "location";
option java_outer_classname = "LocationServiceProto";
option go_package= "fda/proto/location";

service LocationService {
    rpc PublishLocation (PublishLocationRequest) returns (PublishLocationResponse) {}
}

message PublishLocationRequest {
    string user_token = 1;
    common.Point location = 2;
}

message PublishLocationResponse {
    string error = 1;
}

